test(ffm): empirically pin JDK21 preview FFM API traps; contract 2.5 now evidence-backed
FfmProbe.java actually runs on this machine. Measured:
  Linker.Option has critical()?   false  (JDK21 has isTrivial; critical is JDK22)
  Arena has byteSize()?           false
  Arena has allocateFrom?         false  (JDK22 only)
  MemorySegment.setString         absent (JDK21 = setUtf8String, no Charset overload)
  arena.allocate(JAVA_INT, 10)    .byteSize() == 4   -> value overload, NOT a count
  arena.allocateArray(JAVA_INT,10).byteSize() == 40
  strlen via nativeLinker defaultLookup = 5
Also recorded: host PowerShell is 5.1, so -D... args must go through
JAVA_TOOL_OPTIONS instead of the command line (the -D form is mangled).